erDiagram
    USERS ||--o{ EXAMS : creates
    USERS ||--o{ CHECK_INS : performs
    USERS ||--o{ VIOLATIONS : records
    USERS ||--o{ SEATING_PLANS : creates
    USERS ||--o{ AUDIT_LOGS : generates
    
    EXAMS ||--o{ EXAM_ROSTERS : contains
    EXAMS ||--o{ SEATING_PLANS : has
    EXAMS ||--o{ CHECK_INS : tracks
    EXAMS ||--o{ VIOLATIONS : records
    
    STUDENTS ||--o{ EXAM_ROSTERS : enrolled_in
    STUDENTS ||--o{ CHECK_INS : checked_in
    STUDENTS ||--o{ VIOLATIONS : involved_in
    STUDENTS ||--o{ SEATS : occupies
    
    SEATING_PLANS ||--o{ SEATS : contains
    
    USERS {
        int user_id PK
        varchar username UK
        varchar password_hash
        varchar email UK
        enum role "PROCTOR, ADMIN"
        varchar first_name
        varchar last_name
        boolean is_active
        timestamp created_at
        timestamp updated_at
        timestamp last_login
    }
    
    EXAMS {
        int exam_id PK
        varchar exam_code UK
        varchar exam_name
        date exam_date
        time exam_time
        varchar room_location
        int duration_minutes
        int max_capacity
        enum status "DRAFT, ACTIVE, COMPLETED, ARCHIVED"
        int created_by FK
        timestamp created_at
        timestamp updated_at
    }
    
    STUDENTS {
        int student_id PK
        varchar student_number UK
        varchar first_name
        varchar last_name
        varchar email
        varchar registration_number
        varchar registered_photo_path
        timestamp created_at
        timestamp updated_at
    }
    
    EXAM_ROSTERS {
        int roster_id PK
        int exam_id FK
        int student_id FK
        varchar assigned_seat
        timestamp created_at
    }
    
    SEATING_PLANS {
        int seating_plan_id PK
        int exam_id FK
        varchar plan_name
        enum plan_type "GRID, SEAT_CODES"
        int rows
        int columns
        int total_seats
        int created_by FK
        timestamp created_at
        timestamp updated_at
    }
    
    SEATS {
        int seat_id PK
        int seating_plan_id FK
        varchar seat_code
        int row_number
        int column_number
        boolean is_occupied
        int occupied_by_student_id FK
        timestamp created_at
    }
    
    CHECK_INS {
        int check_in_id PK
        int exam_id FK
        int student_id FK
        timestamp check_in_timestamp
        varchar captured_photo_path
        enum verification_result "MATCH, NO_MATCH, OVERRIDE"
        decimal confidence_score
        varchar assigned_seat
        varchar actual_seat
        int proctor_id FK
        text notes
        timestamp created_at
    }
    
    VIOLATIONS {
        int violation_id PK
        int exam_id FK
        int student_id FK
        enum violation_category "IDENTITY_MISMATCH, SEAT_MISMATCH, UNAUTHORIZED_MATERIALS, DISRUPTIVE_BEHAVIOR, LATE_ARRIVAL, OTHER"
        timestamp violation_timestamp
        text reason
        enum severity "LOW, MEDIUM, HIGH"
        varchar evidence_image_path
        enum status "RECORDED, REVIEWED, RESOLVED, DISMISSED"
        int proctor_id FK
        int reviewed_by FK
        timestamp reviewed_at
        timestamp created_at
        timestamp updated_at
    }
    
    AUDIT_LOGS {
        int log_id PK
        int user_id FK
        varchar action
        varchar entity_type
        int entity_id
        text old_value
        text new_value
        varchar ip_address
        timestamp timestamp
    }
